--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=common-use-case-large-dataset-search
 
-spring.cache.type=redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-# prevents redis cache from getting stale, cache cleared after 60000ms or 1 minute
-spring.cache.redis.time-to-live=60000
-
+#spring.cache.type=redis
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
+## prevents redis cache from getting stale, cache cleared after 60000ms or 1 minute
+#spring.cache.redis.time-to-live=60000
+spring.docker.compose.enabled=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test_search_db
 spring.datasource.username=root
